# parsing.life

./: README.md  blog.opam  dune-project  tailwind.config.js
data/: data.ml  posts.yml
src/: main.ml
src/css/: styles.css
templates/: home.mlx  imprint.mlx  layout.mlx  post.mlx  privacy.mlx  social_icons.mlx
